Install .config dirs individually, merges better

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,7 +14,7 @@
 - clean: ['~']
 
 - link:
-    ~/.config: config
+    ~/.config/kak: config/kak
     ~/.gitconfig: gitconfig
     ~/.zshrc: zshrc
 
