--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # Use Ctrl+` as prefix
 unbind C-b
-set-option -g prefix C-`
-bind-key C-` send-prefix
+set -g prefix `
+bind ` send-prefix
 
 # Make split commands not insane
 bind | split-window -h
@@ -16,7 +16,10 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # Enable mouse control
-set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+set -g mouse on
+#set -g mouse-select-window on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+
+bind r source-file ~/.tmux.conf \; display "Configuration reloaded"
 
