kakrc now uses up/down for completion, fixed spaces over tabs

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,8 @@ unbind C-b
 set -g prefix `
 bind ` send-prefix
 
+set -g default-terminal "screen-256color"
+
 # Make split commands not insane
 bind | split-window -h
 bind - split-window -v
