Added kak-lsp config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,6 +15,7 @@
 
 - link:
     ~/.config/kak: config/kak
+    ~/.config/kak-lsp: config/kak-lsp
     ~/.gitconfig: gitconfig
     ~/.tmux.conf: tmux.conf
     ~/.zshrc: zshrc
