--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-# Use Ctrl+` as prefix
+# Use ` as prefix
 unbind C-b
 set -g prefix `
 bind ` send-prefix
@@ -10,6 +10,12 @@ bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+
+# fix pane switching
+unbind M-Left
+unbind M-Right
+unbind M-Up
+unbind M-Down
 
 # Enable mouse control
 set -g mouse on
