--- a/SpaceVim.d/init.toml
+++ b/SpaceVim.d/init.toml
@@ -11,7 +11,7 @@
     # set spacevim theme. by default colorscheme layer is not loaded,
     # if you want to use more colorscheme, please load the colorscheme
     # layer
-    colorscheme = "gruvbox"
+    colorscheme = "onedark"
     colorscheme_bg = "dark"
     # Disable guicolors in basic mode, many terminal do not support 24bit
     # true colors
@@ -29,6 +29,9 @@
     bootstrap_after = 'myspacevim#after'
     project_rooter_outermost = false
 
+[[layers]]
+name = 'colorscheme'
+
 # Enable autocomplete layer
 [[layers]]
 name = 'autocomplete'
@@ -41,15 +44,36 @@ default_position = 'bottom'
 default_height = 30
 
 [[layers]]
+name = 'git'
+
+[[layers]]
+name = 'VersionControl'
+
+[[layers]]
 name = 'denite'
 
 [[layers]]
 name = 'lsp'
 filetypes = [
-  'rust'
+  'rust',
+#'java'
 ]
   [layer.override_cmd]
   'rust' = ['rls']
+#   'java' = [
+    # "java",
+    # "-Declipse.application=org.eclipse.jdt.ls.core.id1",
+    # "-Dosgi.bundles.defaultStartLevel=4",
+    # "-Declipse.product=org.eclipse.jdt.ls.core.product",
+    # "-Dlog.protocol=true",
+    # "-Dlog.level=NONE",
+    # "-noverify",
+    # "-Xmx1G",
+    # "-jar",
+    # "/path/to/eclipse.equinox.launcher.jar",
+    # "-configuration", "/path/to/jdt-language-server-latest/config_linux",
+    # "-data", "/path/to/.cache/javalsp"
+  # ]
 
 [[layers]]
 name = 'lang#rust'
@@ -57,4 +81,8 @@ name = 'lang#rust'
 [[layers]]
 name = 'lang#c'
 
+[[layers]]
+name = 'lang#python'
 
+[[layers]]
+name = 'lang#java'
