SpaceVim filetree config

--- a/SpaceVim.d/init.toml
+++ b/SpaceVim.d/init.toml
@@ -28,6 +28,8 @@
     bootstrap_before = 'myspacevim#before'
     bootstrap_after = 'myspacevim#after'
     project_rooter_outermost = false
+    sidebar_direction = 'left'
+    filetree_direction = 'left'
 
 [[layers]]
 name = 'colorscheme'
